added fortifyScan task